force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_HomeListView__c/pd_jp_20151124__Pardot_DocodocoJp_HomeListView__c.object-meta.xml
<CustomObject>
    <label>MAPlusAC マスター表示設定</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}{000}</displayFormat>
        <label>MAPlus ABMサポートマスターデータビュー設定名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>