force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_HomeListView__c/fields/pd_jp_20151124__PardotItems__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__PardotItems__c</fullName>
    <label>Pardot項目名リスト</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Prospectメール</fullName>
            </value>
            <value>
                <fullName>ソースキャンペーン</fullName>
            </value>
            <value>
                <fullName>訪問回数</fullName>
            </value>
            <value>
                <fullName>ページビュー</fullName>
            </value>
            <value>
                <fullName>ホスト名</fullName>
            </value>
            <value>
                <fullName>IPアドレス</fullName>
            </value>
            <value>
                <fullName>会社</fullName>
            </value>
            <value>
                <fullName>市区町村</fullName>
            </value>
            <value>
                <fullName>都道府県</fullName>
            </value>
            <value>
                <fullName>国</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>初回ページ閲覧日時</fullName>
            </value>
            <value>
                <fullName>最新ページ閲覧日時</fullName>
            </value>
            <value>
                <fullName>Grade</fullName>
            </value>
            <value>
                <fullName>Score</fullName>
            </value>
            <value>
                <fullName>OptedOut</fullName>
            </value>
            <value>
                <fullName>Prospect作成日時</fullName>
            </value>
            <value>
                <fullName>Prospect更新日時</fullName>
            </value>
            <value>
                <fullName>コンバージョンポイント名称</fullName>
            </value>
            <value>
                <fullName>コンバージョン日時</fullName>
            </value>
            <value>
                <fullName>コンバージョン種別</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>