force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_HomeListView__c/fields/pd_jp_20151124__PardotItemsSel__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__PardotItemsSel__c</fullName>
    <label>Pardot表示項目</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>