force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_HomeListView__c/fields/pd_jp_20151124__User__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ユーザ</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pardot_DocodocoJp_HomeListViews</relationshipName>
    <type>Lookup</type>
</CustomField>