force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_HomeListView__c/listViews/pd_jp_20151124__All.listView-meta.xml
<ListView>
    <fullName>pd_jp_20151124__All</fullName>
    <columns>NAME</columns>
    <columns>pd_jp_20151124__User__c</columns>
    <columns>pd_jp_20151124__UpsertID__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>